# shop_example

./: .gitignore  pyproject.toml
core/: settings.py
shop/: models.py  urls.py
