[tool.poetry]
name = "shop-example"
version = "0.1.0"
description = ""
authors = ["Vzhrkv <lieden57@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_example"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
